--- a/app/views/rails_spa/_attachments.html.slim
+++ b/app/views/rails_spa/_attachments.html.slim
@@ -2,7 +2,7 @@ script id="attachments.html" type="text/ng-template"
   ul.attachments
     li ng-repeat="attachment in attachments"
       i.icon-clip
-      a.link ng-href="{{attachment.href}}" target="_blank"
+      a.link ng-href="{{attachment.original}}" target="_blank"
         | {{attachment.title}}
       .attachments__delete ng-show="destroyUrl" ng-click="deleteSlide(attachment.id, $index, $event)"
         | &times;
